--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity
-            android:name=".Landscape"
-            android:configChanges="orientation|screenSize" />
-
-        <activity android:name=".ClearDanger" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-
         <uses-library
             android:name="com.google.android.wearable"
             android:required="false" />
@@ -32,7 +21,7 @@
             android:name="com.google.android.wearable.standalone"
             android:value="true" />
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -40,10 +29,18 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".Results" />
         <activity android:name=".Login" />
-        <activity android:name=".Lobby" />
-        <activity android:name=".Game" />
+        <activity android:name=".activities.Results"></activity>
+        <activity android:name=".activities.Game" />
+        <activity android:name=".activities.Lobby" />
+        
+        <activity android:name=".games.Landscape" android:configChanges="orientation|screenSize"></activity>
+        <activity android:name=".games.ClearDanger" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
