--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.letsparty">
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:allowBackup="true"
@@ -9,6 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".games.MeasureVoice"></activity>
 
         <uses-library
             android:name="com.google.android.wearable"
@@ -30,15 +32,17 @@
         </activity>
 
         <activity android:name=".Login" />
-        <activity android:name=".activities.Results"></activity>
+        <activity android:name=".activities.Results" />
         <activity android:name=".games.Game" />
         <activity android:name=".activities.Lobby" />
         <activity android:name=".activities.GameRunner" />
-
-        <activity android:name=".games.Landscape" android:configChanges="orientation|screenSize"></activity>
-        <activity android:name=".games.ClearDanger" >
+        <activity
+            android:name=".games.Landscape"
+            android:configChanges="orientation|screenSize" />
+        <activity android:name=".games.ClearDanger">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
