--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".games.FaceDirection"></activity>
-        <activity android:name=".games.ShakePhone" />
 
         <uses-library
             android:name="com.google.android.wearable"
@@ -45,6 +43,9 @@
             android:configChanges="orientation|screenSize" />
         <activity android:name=".games.ClearDanger" />
         <activity android:name=".games.MeasureVoice" />
+        <activity android:name=".games.ShakePhone"></activity>
+        <activity android:name=".games.FaceDirection"></activity>
+
 
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
