--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,5 +56,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     compileOnly 'com.google.android.wearable:wearable:2.5.0'
-
+    implementation 'me.dm7.barcodescanner:zxing:1.9'
+    implementation 'com.google.mlkit:barcode-scanning:16.0.3'
 }
