--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,11 +20,6 @@
         <activity
             android:name=".activities.NameDialog"
             android:label="@string/title_activity_name_dialog">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".activities.JoinGame"></activity>
 
@@ -40,6 +35,7 @@
             android:value="barcode" />
 
         <activity android:name=".activities.MainActivity">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -56,7 +52,9 @@
             android:name=".games.Landscape"
             android:configChanges="orientation|screenSize" />
         <activity android:name=".games.ClearDanger" />
-        <activity android:name=".games.MeasureVoice" />
+        <activity android:name=".games.MeasureVoice">
+
+        </activity>
         <activity android:name=".games.ShakePhone" />
         <activity android:name=".games.FaceDirection" />
 
