--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,15 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera" />
+
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:allowBackup="true"
@@ -17,12 +25,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".games.WordColorV1">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".activities.NameDialog"
-            android:label="@string/title_activity_name_dialog">
-        </activity>
-        <activity android:name=".activities.JoinGame"></activity>
-
+            android:label="@string/title_activity_name_dialog"></activity>
+        <activity android:name=".activities.JoinGame" />
         <!--
                Set to true if your app is Standalone, that is, it does not require the handheld
                app to run.
@@ -36,13 +49,7 @@
 
         <activity android:name=".activities.MainActivity">
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
-
         <activity android:name=".Login" />
         <activity android:name=".activities.Results" />
         <activity android:name=".activities.Lobby" />
@@ -52,9 +59,7 @@
             android:name=".games.Landscape"
             android:configChanges="orientation|screenSize" />
         <activity android:name=".games.ClearDanger" />
-        <activity android:name=".games.MeasureVoice">
-
-        </activity>
+        <activity android:name=".games.MeasureVoice"></activity>
         <activity android:name=".games.ShakePhone" />
         <activity android:name=".games.FaceDirection" />
 
@@ -73,17 +78,6 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
     </application>
-
-
-
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
 </manifest>
