--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,10 +41,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-functions'
     implementation 'com.google.firebase:firebase-database'
     implementation 'com.google.firebase:firebase-analytics'
-    implementation 'com.google.firebase:firebase-messaging:17.3.4'
+    implementation 'com.google.firebase:firebase-messaging'
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
-    implementation 'com.google.firebase:firebase-database:16.0.4'
-    implementation 'com.google.firebase:firebase-functions:16.1.3'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.wear:wear:1.0.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
