--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,11 +27,7 @@
         android:theme="@style/AppTheme">
 
         <activity android:name=".games.WordColorV1">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity
@@ -63,7 +59,14 @@
         <activity android:name=".games.Game" />
         <activity
             android:name=".games.Landscape"
-            android:configChanges="orientation|screenSize" />
+            android:configChanges="orientation|screenSize" >
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".games.ClearDanger" />
         <activity android:name=".games.MeasureVoice">
 
